<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.loneoaktech.test.weatherapp.ZipEntryFragment"
    android:paddingStart="6dp"
    android:paddingEnd="6dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            >

            <ImageView
                android:id="@+id/backIcon"
                android:layout_width="@dimen/touch_target_size"
                android:layout_height="@dimen/touch_target_size"
                android:src="@drawable/ic_chevron_left_black_24dp"
                android:contentDescription="@string/description_menu"
                />

            <TextView
                android:id="@+id/locationNameText"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                tools:text="Newtown, CT 6470"

                android:textSize="@dimen/location_name_text_size"
                android:gravity="center_horizontal"
                />
        </LinearLayout>

        <TextView
            android:id="@+id/periodLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/label_hours"
            style="@style/SubHeadingText"
            />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/periodRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            />


        <TextView
            android:id="@+id/darkSkyAttributionText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/summary_bottom_margin"
            android:layout_gravity="center_horizontal"
            android:text="@string/message_powered_by_dark_sky"
            android:clickable="true"
            android:focusable="true"
            style="@style/AttributionText"
            />


    </LinearLayout>


    <LinearLayout
        android:id="@+id/loadingShade"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:background="@color/loadingShade"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topPanelBottomGuide"
        app:layout_constraintBottom_toBottomOf="parent"

        android:gravity="center_vertical"
        tools:visibility="invisible"
        >

        <ProgressBar
            android:id="@+id/loadingProgress"
            android:layout_width="@dimen/loading_progress_size"
            android:layout_height="@dimen/loading_progress_size"
            style="@style/Widget.AppCompat.ProgressBar"
            android:layout_gravity="center"
            />
    </LinearLayout>


</FrameLayout>