<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.loneoaktech.test.weatherapp.ZipEntryFragment"
    android:paddingStart="6dp"
    android:paddingEnd="6dp"
    >

    <!-- Doesn't work because the RecyclerView doesn't play well with the ConstraintLayout -->

    <ImageView
        android:id="@+id/backIcon"
        android:layout_width="@dimen/touch_target_size"
        android:layout_height="@dimen/touch_target_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/locationNameText"
        app:layout_constraintTop_toTopOf="@+id/locationNameText"
        app:layout_constraintBottom_toBottomOf="@id/locationNameText"
        android:src="@drawable/ic_chevron_left_black_24dp"
        android:contentDescription="@string/description_menu"
        />

    <TextView
        android:id="@+id/locationNameText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        tools:text="Newtown, CT 6470"
        app:layout_constraintStart_toEndOf="@id/backIcon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/topPanelBottomGuide"
        android:textSize="@dimen/location_name_text_size"
        android:gravity="center_horizontal"
        />


    <android.support.constraint.Guideline
        android:id="@+id/topPanelBottomGuide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".10"
        />

    <LinearLayout
        android:id="@+id/loadingShade"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:background="@color/loadingShade"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topPanelBottomGuide"
        app:layout_constraintBottom_toBottomOf="parent"

        android:gravity="center_vertical"
        tools:visibility="invisible"
        >

        <ProgressBar
            android:id="@+id/loadingProgress"
            android:layout_width="@dimen/loading_progress_size"
            android:layout_height="@dimen/loading_progress_size"
            style="@style/Widget.AppCompat.ProgressBar"
            android:layout_gravity="center"
            />
    </LinearLayout>

    <TextView
        android:id="@+id/periodLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topPanelBottomGuide"
        app:layout_constraintBottom_toTopOf="@id/periodRecyclerView"

        app:layout_constraintVertical_bias="0"
        android:text="@string/label_hours"
        style="@style/SubHeadingText"
        />



    <android.support.v7.widget.RecyclerView
        android:id="@+id/periodRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintVertical_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/periodLabel"
        app:layout_constraintBottom_toTopOf="@id/darkSkyAttributionText"

        />


    <TextView
        android:id="@+id/darkSkyAttributionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/periodRecyclerView"
        android:layout_marginBottom="@dimen/summary_bottom_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/message_powered_by_dark_sky"
        android:clickable="true"
        android:focusable="true"
        style="@style/AttributionText"
        />

</android.support.constraint.ConstraintLayout>